--- a/3rdparty/spc/Cargo.toml
+++ b/3rdparty/spc/Cargo.toml
@@ -2,6 +2,7 @@
 name = "spc"
 version = "0.1.1"
 authors = ["ferris <jake@fusetools.com>"]
+edition = "2018"
 description = "A library for manipulating SPC (Super Nintendo music) files."
 homepage = "https://github.com/emu-rs/spc"
 repository = "https://github.com/emu-rs/spc"
