--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.44"
+cpal = "0.13.4"
 directories = "4.0.1"
 # Gives us egui, epi and web+native backends
 eframe = { version = "0.14.0", default-features = false } # Disable bundled fonts
