Add rfd file dialog library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ cpal = "0.13.4"
 directories = "4.0.1"
 # Gives us egui, epi and web+native backends
 eframe = { version = "0.14.0", default-features = false } # Disable bundled fonts
+rfd = "0.5.0"
 rusqlite = "0.25.3"
 snes-apu = { path = "3rdparty/snes-apu" }
 spc = { path = "3rdparty/spc" }
